# terminal-delight

./: .gitignore  BELL_SOUNDS.md  CHANGELOG.md  CLA.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  agents.html  gamba.html  global.html  index.html  info.html  package.json  popout.html  prototype.html  spin-to-win.html  start-crawl.html  tv.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  theme_submission.yml
.github/workflows/: ci.yml  cla.yml
app/: Cargo.toml  about.hbs  about.toml  deny.toml
app/.cargo/: config.toml
app/src/: bell.rs  crt.rs  csd.rs  demo.rs  gamba.rs  hud.rs  lang.rs  main.rs  mcp.rs  mcp_tail.rs  mcp_transport.rs  pane.rs  plugins.rs  recover.rs  session.rs  term.rs  theme.rs  warp.rs
app/themes/: field-command.toml  gamba.toml  hacker.toml  quiet-command.toml  tactical-overdrive.toml
docs/: 2026-06-20-competitive-feature-mining-and-launch-plan-review.md  2026-06-20-multi-language-gtm-strategy.md  2026-06-21-leanctx-savings-plugin-gap-analysis.md  FOCUS_BLUR_REPORT.md  PLAN.md  mcp.md
docs/brand/: BRAND.md  brand-sheet.html
docs/features/: 01-agentic-mcp.md  02-agent-dashboard.md  03-agent-graveyard.md  04-plugins.md  05-visuals-crt.md  06-themes.md  07-terminal-core.md  08-i18n.md  09-packaging.md  ENV-FLAGS.md  README.md
docs/handoffs/: HANDOFF-2026-06-22-agent-wall-filters.md  HANDOFF-2026-06-22-leanctx-savings-plugin.md  HANDOFF-2026-06-22-overnight-issue-sweep.md  HANDOFF-2026-06-22-per-card-warp-and-ci-green.md
docs/patches/: 0001-td-crt-pass.patch  0002-focus-blur.patch  0002-sever-gpl-crates.patch  0003-text-crawl.patch  0004-warp-tube-cap-32.patch
docs/plans/: HARDENING-1.0.md
docs/runbooks/: OVERNIGHT-AFK-hardening.md  overnight-hardening.workflow.js
docs/spec/: anchor-top-read.md
packaging/: terminal-delight.desktop
plugins/leanctx-mcp/: leanctx-mcp  plugin.json
scripts/: build-appimage.sh  install-desktop.sh  install-hotkey.sh  install-plugins.sh  prepare-gpui.sh  release-smoke.sh  setup-deps.sh
src/js/: detach.js  main.js  panes.js  popout.js  theme-engine.js  workspace.js
src/styles/: theme.css  workspace.css
web-warp-lab/: README.md  RESEARCH_LOG.md  package-lock.json  package.json
web-warp-lab/approaches/: 01-svg-displacement.html  02-webgl-foreignobject.html  03-webgl-canvas-terminal.html  04-webgpu-wgsl.html  05-canvas-hittest.html  06-css-limits.html  07-whole-site-warp.html  08-kiosk-landing.html  09-scrollable-site.html
web-warp-lab/shots/video/: page@b4179c1c49c8d4462f60737073898d5a.webm
web-warp-lab/shots/video2/: page@c44ab376e78e59ff299e5d02c8ee41b0.webm
web-warp-lab/shots/video3/: page@95b775aef95213639fccf169be884439.webm
web-warp-lab/shots/video4/: page@d8bb625057d70fe6ba052c42df3f265f.webm
web-warp-lab/tools/: perf.mjs  record.mjs  shoot.mjs
